# ha-pre-hdo

./: LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml  validate.yml
custom_components/pre_hdo/: __init__.py  api_client.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  parser.py  sensor.py  strings.json
custom_components/pre_hdo/translations/: cs.json  en.json
tests/: conftest.py  test_api_client.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_parser.py  test_sensor.py
